Fixed search dropdown container gap on medium devices

--- a/src/Components/Search/search.module.scss
+++ b/src/Components/Search/search.module.scss
@@ -321,6 +321,10 @@
     top: 9.95vh;
   }
 
+  .form-dropdown-container {
+    top: 9vh;
+  }
+
   .search-input {
     height: 4rem;
     border-radius: 3.5rem;
